CMAKE_MINIMUM_REQUIRED (VERSION 3.7)


# 引入公共库路径
INCLUDE_DIRECTORIES (${COMMON_PATH})
INCLUDE_DIRECTORIES (${SRC_ROOT}/common)


# 需编译的文件
FILE (GLOB_RECURSE MAIN_FILES
    "${SRC_ROOT}/main/*.cpp"
    "${COMMON_PATH}/*.cpp"
)



SET (EXEC_NAME hut)



# 编译
ADD_EXECUTABLE (${EXEC_NAME} ${MAIN_FILES})

# 链接动态库
TARGET_LINK_LIBRARIES (${EXEC_NAME} ${PROJECT_LIBRARY})
