CMAKE_MINIMUM_REQUIRED (VERSION 3.7)


# 引入公共库路径
INCLUDE_DIRECTORIES (${COMMON_PATH})
INCLUDE_DIRECTORIES (${SRC_ROOT}/common)


# 需编译的文件
FILE (GLOB_RECURSE _FILES
    "${TEST_ROOT}/seqList/*.cpp"
)


SET (EXE_NAME seqList_t)


# 编译
ADD_EXECUTABLE (${EXE_NAME} ${_FILES})

# 链接动态库
TARGET_LINK_LIBRARIES (${EXE_NAME} ${PROJECT_LIBRARY})


