CMAKE_MINIMUM_REQUIRED (VERSION 3.7)


INCLUDE_DIRECTORIES(${COMMON_ROOT})
INCLUDE_DIRECTORIES(${SRC_ROOT}/common)


FILE (GLOB_RECURSE _FILES
    "${TEST_ROOT}/simpThread/*.cpp"
    "${COMMON_ROOT}/utility/thread/SimpThread.cpp"
)


SET(EXE_NAME simpThread_t)


ADD_EXECUTABLE(${EXE_NAME} ${_FILES})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${PROJECT_LIBRARY})

