CMAKE_MINIMUM_REQUIRED (VERSION 3.7)


# 引入公共库路径
INCLUDE_DIRECTORIES (${COMMON_ROOT}/)
INCLUDE_DIRECTORIES (${SRC_ROOT}/common)


FILE (GLOB_RECURSE _FILES
    "${TOOLS_ROOT}/server/*.cpp"
)


SET (EXE_NAME server_tl)

ADD_EXECUTABLE (${EXE_NAME} ${_FILES})
TARGET_LINK_LIBRARIES (${EXE_NAME} ${PROJECT_LIBRARY})



